# libcore

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md
core/include/: build_expect.h  core.h  non_copyable.h  non_moveable.h  pure.h
core/include/common/: helper.h  xxhash32.h  xxhash64.h
core/include/component/: api.h  container.h  shared_lock.h  thread_container.h  timer_channel.h  udp_server_channel.h
core/include/component/discovery/: component.h  watcher.h
core/include/component/process/: manager.h  process.h  process_event.h
core/include/coro/: task.h
core/include/event/: event_buffer_channel.h  event_channel.h  event_loop.h  event_no_buffer_channel.h  event_queue.h  event_queue_handler.h  event_smart_ptr.h  event_timer.h
core/include/http/: http_action.h  http_attributes.h  http_client.h  http_client_response.h  http_config.h  http_manager.h  http_request.h  http_response.h  http_router.h  http_worker.h
core/include/os/: network_interface.h  unix_cgroup.h  unix_countdown_latch.h  unix_current_thread.h  unix_pid_file.h  unix_process_daemonize.h  unix_sigset.h  unix_sysinfo.h  unix_thread.h  unix_thread_proc.h  unix_timer.h  unix_timestamp.h  unix_udp_server.h  unix_util.h
core/source/: CMakeLists.txt
core/source/common/: CMakeLists.txt  helper.cc
core/source/component/: CMakeLists.txt  thread_container.cc
core/source/component/process/: CMakeLists.txt  manager.cc  process.cc
core/source/event/: CMakeLists.txt  event_buffer_channel.cc  event_channel.cc  event_loop.cc  event_no_buffer_channel.cc  event_queue.cc  event_queue_handler.cc  event_timer.cc
core/source/http/: CMakeLists.txt  http_client.cc  http_manager.cc  http_request.cc  http_response.cc  http_router.cc  http_worker.cc
core/source/http/ssl/: hostcheck.c  openssl_hostname_validation.c
core/source/os/: CMakeLists.txt  network_interface.cc  unix_cgroup.cc  unix_countdown_latch.cc  unix_current_thread.cc  unix_pid_file.cc  unix_sysinfo.cc  unix_thread.cc  unix_thread_proc.cc  unix_timer.cc  unix_timestamp.cc
test/os/: CMakeLists.txt  test_timer.cc
